--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<h1> Hello, I'm Alan </h1>
+<h1 align="center">Hi 👋, I'm Alan</h1>
+<h3 align="center">CS student interested in Machine Learning, Artificial Intelligence, DevOps, 💰 Finance, 🧬 Bioinformatics </h3>
