--- a/index.html
+++ b/index.html
@@ -1,2 +1,170 @@
-<h1 align="center">Hi 👋, I'm Alan</h1>
-<h3 align="center">CS student interested in Machine Learning, Artificial Intelligence, DevOps, 💰 Finance, 🧬 Bioinformatics </h3>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <style>
+      * {
+        background-color: black;
+        color: whitesmoke;
+      }
+
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+
+      .profile {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-top: 40px;
+        padding-bottom: 20px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
+
+      .profile-pic {
+        border-radius: 50%;
+        width: 250px;
+        height: 250px;
+        margin-right: 60px;
+        overflow: hidden;
+      }
+
+      .profile-pic img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
+      .profile-box {
+        border: 1px solid burlywood;
+      }
+
+      .profile-text {
+        padding: 40px;
+      }
+
+      .center {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .card-container {
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .card {
+        position: relative;
+        flex: 1;
+        overflow: hidden;
+      }
+
+      .card img {
+        width: 100%;
+        height: 100%;
+      }
+
+      .card-text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        color: #fff;
+        width: 100%;
+      }
+
+      h1 {
+        font-size: 24px;
+      }
+
+      h2 {
+        font-size: 20px;
+      }
+
+      p {
+        font-size: 18px;
+        margin: 10px 0;
+      }
+    </style>
+
+    <title>About Me</title>
+  </head>
+  <body>
+    <div class="profile">
+      <div class="profile-pic">
+        <img src="alan.jpeg" alt="Your Profile Picture" />
+      </div>
+      <div class="profile-box">
+        <div class="profile-text">
+          <h1>Hi 👋, I'm Alan</h1>
+          <ul>
+            <li>Senior in SMU</li>
+            <li>Computer Science (Cybersecurity) | Business Analytics</li>
+            <li>Spent the recent winter in Korea</li>
+            <li></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="center">
+      <h2>🇰🇷 Favourite Travel Destination 🇰🇷</h2>
+    </div>
+
+    <div class="center">
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/rW_nDSsH72Q?si=Utued4TddDS4cqsU"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; mute; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
+    </div>
+
+    &nbsp;
+
+    <div class="center">
+      <h2>Interests</h2>
+    </div>
+
+    <div class="card-container">
+      <div class="card">
+        <img
+          src="https://img.freepik.com/free-vector/hand-drawn-flat-design-npl-illustration_23-2149277640.jpg?w=1060&t=st=1692968699~exp=1692969299~hmac=f8a02f893753fd69d9b7d66a4826ad2da953bb48b92311ffb12717a811438856"
+          alt="Card 1"
+        />
+        <div class="card-text">
+          <h2>Artificial Intelligence & Machine Learning</h2>
+        </div>
+      </div>
+      <div class="card">
+        <img
+          src="https://img.freepik.com/free-vector/flat-biotechnology-concept-illustration_23-2148892121.jpg?w=2000&t=st=1692969027~exp=1692969627~hmac=6077b7e95e21639f6728d20385b4ecaae2678652cbba6af4b142e140c867f61d"
+          alt="Card 2"
+        />
+        <div class="card-text">
+          <h2>Bioinformatics</h2>
+        </div>
+      </div>
+      <div class="card">
+        <img
+          src="https://img.freepik.com/free-vector/flat-design-devops-illustration_52683-84086.jpg?w=1060&t=st=1692969094~exp=1692969694~hmac=8f3bfe723621bb0193206a3d9dfde6ce8ff1edb6af04566b5a226c4db6c05a0f"
+          alt="Card 3"
+        />
+        <div class="card-text">
+          <h2>DevOps</h2>
+        </div>
+      </div>
+    </div>
+    &nbsp;
+  </body>
+</html>
