updated biography and yt autoplay

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       }
 
       .profile-text {
-        padding: 40px;
+        padding: 20px;
       }
 
       .center {
@@ -108,7 +108,13 @@
             <li>Senior in SMU</li>
             <li>Computer Science (Cybersecurity) | Business Analytics</li>
             <li>Spent the recent winter in Korea</li>
-            <li></li>
+            <li>Lots of interests, Not enough time</li>
+            <ul>
+                <li>AI & ML</li>
+                <li>Finance</li>
+                <li>Bioinformatics</li>
+                <li>DevOps</li>
+            </ul>
           </ul>
         </div>
       </div>
@@ -122,10 +128,10 @@
       <iframe
         width="560"
         height="315"
-        src="https://www.youtube.com/embed/rW_nDSsH72Q?si=Utued4TddDS4cqsU"
+        src="https://www.youtube.com/embed/rW_nDSsH72Q?si=Utued4TddDS4cqsU?autoplay=1"
         title="YouTube video player"
         frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; mute; picture-in-picture; web-share"
+        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; mute; picture-in-picture; web-share"
         allowfullscreen
       ></iframe>
     </div>
