--- a/index.html
+++ b/index.html
@@ -126,12 +126,10 @@
 
     <div class="center">
       <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/rW_nDSsH72Q?si=Utued4TddDS4cqsU?autoplay=1"
-        title="YouTube video player"
+        width="660"
+        height="415"
+        src="https://www.youtube.com/embed/rW_nDSsH72Q?autoplay=1&mute=1&loop=1"
         frameborder="0"
-        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; mute; picture-in-picture; web-share"
         allowfullscreen
       ></iframe>
     </div>
