--- a/index.html
+++ b/index.html
@@ -7,30 +7,13 @@
 
     <style>
       * {
-        background-color: black;
-        color: whitesmoke;
-      }
-
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-      }
-
-      .profile {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding-top: 40px;
-        padding-bottom: 20px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        background-color: black !important;
       }
 
       .profile-pic {
         border-radius: 50%;
-        width: 250px;
-        height: 250px;
-        margin-right: 60px;
+        width: 300px;
+        height: 300px;
         overflow: hidden;
       }
 
@@ -40,91 +23,184 @@
         object-fit: cover;
       }
 
-      .profile-box {
-        border: 1px solid burlywood;
-      }
-
-      .profile-text {
-        padding: 20px;
-      }
-
-      .center {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .card-container {
-        display: flex;
-        justify-content: space-between;
-      }
-
-      .card {
-        position: relative;
-        flex: 1;
+      .carousel-item img {
+        object-fit: cover;
+        object-position: center;
         overflow: hidden;
+        height: 50vh;
       }
 
-      .card img {
-        width: 100%;
-        height: 100%;
+      .carousel {
+        width: 50%;
+        margin: auto;
       }
 
-      .card-text {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-        color: #fff;
-        width: 100%;
-      }
-
-      h1 {
-        font-size: 24px;
-      }
-
-      h2 {
-        font-size: 20px;
-      }
-
-      p {
-        font-size: 18px;
-        margin: 10px 0;
+      #contact-container {
+        height: 300px;
       }
     </style>
+
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
 
     <title>About Me</title>
   </head>
   <body>
-    <div class="profile">
-      <div class="profile-pic">
-        <img src="alan.jpeg" alt="Your Profile Picture" />
-      </div>
-      <div class="profile-box">
-        <div class="profile-text">
-          <h1>Hi 👋, I'm Alan</h1>
-          <ul>
-            <li>Senior in SMU</li>
-            <li>Computer Science (Cybersecurity) | Business Analytics</li>
-            <li>Spent the recent winter in Korea</li>
-            <li>Lots of interests, Not enough time</li>
-            <ul>
-                <li>AI & ML</li>
-                <li>Finance</li>
-                <li>Bioinformatics</li>
-                <li>DevOps</li>
-            </ul>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><strong>About Me</strong></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link active dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Favourites
+              </a>
+              <ul class="dropdown-menu bg-white">
+                <li>
+                  <a class="dropdown-item bg-white" href="#travel">Travel Destination</a>
+                </li>
+                <li>
+                  <a class="dropdown-item bg-white" href="#interests">Interests</a>
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item bg-white"
+                    data-bs-toggle="modal"
+                    data-bs-target="#exampleModal"
+                    href="#profs"
+                    >Prof</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#contact"
+                >Contact Me</a
+              >
+            </li>
           </ul>
+          <form class="d-flex" role="search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success" type="submit">
+              Search
+            </button>
+          </form>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header bg-white">
+            <h1 class="modal-title fs-5 bg-white" id="exampleModalLabel">Supreme Leader</h1>
+            <button
+              type="button"
+              class="btn-close bg-danger"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body bg-white text-center">
+            <img style="max-width: 450px;" src="https://i.ytimg.com/vi/cdiq_QcHF8I/maxresdefault.jpg">
+          </div>
+
+          <div class="modal-footer bg-white">
+            <button
+              type="button"
+              class="btn btn-secondary bg-danger"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary bg-primary">Save changes</button>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="center">
-      <h2>🇰🇷 Favourite Travel Destination 🇰🇷</h2>
+    <!-- Bio -->
+    <div class="d-flex justify-content-evenly container mt-4">
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="profile-pic">
+            <img src="alan.jpeg" />
+          </div>
+        </div>
+        <div class="col-sm-6 text-light text-center">
+          <h1 class="mt-2">Hi 👋, I'm Alan</h1>
+          <div class="row">
+            <div class="col mt-2">
+              <img
+                style="max-width: 60px; max-height: 60px"
+                src="https://www.smu.edu.sg/sites/default/files/brand-identity/smu-logo.jpg"
+              />
+              <p>Senior in SMU</p>
+              <p>Computer Science (Cybersecurity) | Business Analytics</p>
+            </div>
+            <div class="col mt-2">
+              <img
+                style="max-width: 60px; max-height: 60px"
+                src="https://www.korea.edu/mbshome/mbs/university/images/img/img_1_1_5_1_2__4.gif"
+              />
+              <p>Winter Exchange in KU</p>
+              <p>Artificial Intelligence</p>
+            </div>
+          </div>
+          <h4 class="pb-2">Interesting Facts About Me</h4>
+            <p>
+                Lots of interests, Never enough time
+            </p>
+            <p>
+                Loves Korean food too much
+            </p>
+        </div>
+      </div>
     </div>
 
-    <div class="center">
+    <!-- Favourite Destination -->
+    <h3 id="travel" class="display-6 text-center text-light mt-4">
+      🇰🇷 Favourite Travel Destination 🇰🇷
+    </h3>
+    <div class="m-auto text-center">
       <iframe
         width="660"
         height="415"
@@ -134,41 +210,114 @@
       ></iframe>
     </div>
 
-    &nbsp;
-
-    <div class="center">
-      <h2>Interests</h2>
+    <!-- Interests -->
+    <h3 id="interests" class="display-6 text-center text-light mt-4">
+      Interests
+    </h3>
+    <div id="carouselExampleCaptions" class="carousel slide mt-4 bg-black">
+      <div class="carousel-indicators">
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="0"
+          class="active"
+          aria-current="true"
+          aria-label="Slide 1"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="1"
+          aria-label="Slide 2"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="2"
+          aria-label="Slide 3"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="0"
+          aria-label="Slide 4"
+        ></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="https://img.freepik.com/free-vector/hand-drawn-flat-design-npl-illustration_23-2149277640.jpg?w=1060&t=st=1692968699~exp=1692969299~hmac=f8a02f893753fd69d9b7d66a4826ad2da953bb48b92311ffb12717a811438856"
+            class="d-block w-100"
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Artificial Intelligence & Machine Learning</h5>
+            <p>Classical ML, NLP</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            src="https://img.freepik.com/free-vector/flat-biotechnology-concept-illustration_23-2148892121.jpg?w=2000&t=st=1692969027~exp=1692969627~hmac=6077b7e95e21639f6728d20385b4ecaae2678652cbba6af4b142e140c867f61d"
+            class="d-block w-100"
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Bioinformatics</h5>
+            <p>Genomic Analysis</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            src="https://img.freepik.com/free-vector/flat-design-devops-illustration_52683-84086.jpg?w=1060&t=st=1692969094~exp=1692969694~hmac=8f3bfe723621bb0193206a3d9dfde6ce8ff1edb6af04566b5a226c4db6c05a0f"
+            class="d-block w-100"
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>DevOps</h5>
+            <p>Actually more interested in MLOps</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            src="https://images.unsplash.com/photo-1590283603385-17ffb3a7f29f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2940&q=80"
+            class="d-block w-100"
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Finance</h5>
+            <p>Just investing and trading in general</p>
+          </div>
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
 
-    <div class="card-container">
-      <div class="card">
-        <img
-          src="https://img.freepik.com/free-vector/hand-drawn-flat-design-npl-illustration_23-2149277640.jpg?w=1060&t=st=1692968699~exp=1692969299~hmac=f8a02f893753fd69d9b7d66a4826ad2da953bb48b92311ffb12717a811438856"
-          alt="Card 1"
-        />
-        <div class="card-text">
-          <h2>Artificial Intelligence & Machine Learning</h2>
-        </div>
-      </div>
-      <div class="card">
-        <img
-          src="https://img.freepik.com/free-vector/flat-biotechnology-concept-illustration_23-2148892121.jpg?w=2000&t=st=1692969027~exp=1692969627~hmac=6077b7e95e21639f6728d20385b4ecaae2678652cbba6af4b142e140c867f61d"
-          alt="Card 2"
-        />
-        <div class="card-text">
-          <h2>Bioinformatics</h2>
-        </div>
-      </div>
-      <div class="card">
-        <img
-          src="https://img.freepik.com/free-vector/flat-design-devops-illustration_52683-84086.jpg?w=1060&t=st=1692969094~exp=1692969694~hmac=8f3bfe723621bb0193206a3d9dfde6ce8ff1edb6af04566b5a226c4db6c05a0f"
-          alt="Card 3"
-        />
-        <div class="card-text">
-          <h2>DevOps</h2>
-        </div>
-      </div>
+    <!-- Contact -->
+    <h3 id="contact" class="display-6 text-center text-light mt-4">
+      Contact Me
+    </h3>
+    <div id="contact-container" class="container text-light">
+      <p>Call me maybe</p>
     </div>
-    &nbsp;
+
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
