--- a/index.html
+++ b/index.html
@@ -159,41 +159,48 @@
 
     <!-- Bio -->
     <div class="d-flex justify-content-evenly container mt-4">
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="profile-pic">
-            <img src="alan.jpeg" />
-          </div>
+        <div class="row align-items-center">
+            <div class="col">
+            <div class="profile-pic">
+                <img src="alan.jpeg" />
+            </div>
+            </div>
+            <div class="col text-light text-center">
+            <h1 class="mt-2">Hi 👋, I'm Alan</h1>
+            <h4 class="mt-2">Computer Science Major in SMU</h4>
+            <h4 class="mt-4">Fun Facts About Me</h4>
+                <p>
+                    Lots of interests, Never enough time
+                </p>
+                <p>
+                    Loves 🇰🇷🇰🇷 food too much
+                </p>
+                <p>
+                    소주 2병 반
+                </p>
+            </div>
         </div>
-        <div class="col-sm-6 text-light text-center">
-          <h1 class="mt-2">Hi 👋, I'm Alan</h1>
-          <div class="row">
+    </div>
+
+    <div class="d-flex justify-content-evenly text-center container mt-4 text-light">
+        <div class="row">
             <div class="col mt-2">
-              <img
-                style="max-width: 60px; max-height: 60px"
-                src="https://www.smu.edu.sg/sites/default/files/brand-identity/smu-logo.jpg"
-              />
-              <p>Senior in SMU</p>
-              <p>Computer Science (Cybersecurity) | Business Analytics</p>
+                <img
+                    style="max-width: 60px; max-height: 60px"
+                    src="https://www.smu.edu.sg/sites/default/files/brand-identity/smu-logo.jpg"
+                />
+                <p class="mt-2">Senior in SMU</p>
+                <p>Computer Science (Cybersecurity) & Business Analytics</p>
             </div>
             <div class="col mt-2">
-              <img
-                style="max-width: 60px; max-height: 60px"
-                src="https://www.korea.edu/mbshome/mbs/university/images/img/img_1_1_5_1_2__4.gif"
-              />
-              <p>Winter Exchange in KU</p>
-              <p>Artificial Intelligence</p>
+                <img
+                    style="max-width: 60px; max-height: 60px"
+                    src="https://www.korea.edu/mbshome/mbs/university/images/img/img_1_1_5_1_2__4.gif"
+                />
+                <p class="mt-2">Winter Exchange in KU</p>
+                <p>Artificial Intelligence</p>
             </div>
-          </div>
-          <h4 class="pb-2">Interesting Facts About Me</h4>
-            <p>
-                Lots of interests, Never enough time
-            </p>
-            <p>
-                Loves Korean food too much
-            </p>
         </div>
-      </div>
     </div>
 
     <!-- Favourite Destination -->
@@ -251,7 +258,7 @@
           />
           <div class="carousel-caption d-none d-md-block">
             <h5>Artificial Intelligence & Machine Learning</h5>
-            <p>Classical ML, NLP</p>
+            <p>Classical ML, NLP, ML & AI Engineering</p>
           </div>
         </div>
         <div class="carousel-item">
