--- a/index.html
+++ b/index.html
@@ -1,20 +1,113 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="retro">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+
+    <!-- <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script> -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.0.8/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <link rel="stylesheet" href="index.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="index.js" defer></script>
 
     <title>Personal Github Page</title>
   </head>
+
   <body>
-    <div class="prose prose-stone">
-      <h1>Hello world!</h1>
-      <p>Work in progress</p>
+    <div class="navbar bg-base-100 fixed">
+      <div class="navbar-start">
+        <div class="dropdown">
+          <label tabindex="0" class="btn btn-ghost lg:hidden">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-5 w-5"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 6h16M4 12h8m-8 6h16"
+              />
+            </svg>
+          </label>
+          <ul
+            tabindex="0"
+            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
+          >
+            <li><a>Item 1</a></li>
+            <li>
+              <a>Parent</a>
+              <ul class="p-2">
+                <li><a>Submenu 1</a></li>
+                <li><a>Submenu 2</a></li>
+              </ul>
+            </li>
+            <li><a>Item 3</a></li>
+          </ul>
+        </div>
+        <a class="btn btn-ghost text-xl">Alan</a>
+      </div>
+      <div class="navbar-center hidden lg:flex">
+        <ul class="menu menu-horizontal px-1">
+          <li><a>Item 1</a></li>
+          <li tabindex="0">
+            <details>
+              <summary>Projects</summary>
+              <ul class="p-2">
+                <li><a>Submenu 1</a></li>
+                <li><a>Submenu 2</a></li>
+              </ul>
+            </details>
+          </li>
+          <li><a>Item 3</a></li>
+        </ul>
+      </div>
+      <div class="navbar-end">
+        <label class="flex cursor-pointer gap-2">
+          <span class="label-text">Current</span>
+          <input
+            type="checkbox"
+            value="dracula"
+            class="toggle theme-controller"
+          />
+          <span class="label-text">Dracula</span>
+        </label>
+      </div>
+    </div>
+
+    <div
+      class="hero min-h-screen"
+      style="
+        background-image: url(https://daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);
+      "
+    >
+      <div class="hero-overlay bg-opacity-60"></div>
+      <div class="hero-content text-center text-neutral-content">
+        <div class="max-w-md">
+          <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+          <p class="mb-5 container typed">
+            Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
+            excepturi exercitationem quasi. In deleniti eaque aut repudiandae et
+            a id nisi.
+          </p>
+          <button class="btn btn-primary">Get Started</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="mockup-browser border bg-base-300">
+      <div class="mockup-browser-toolbar">
+        <div class="input">https://daisyui.com</div>
+      </div>
+      <div class="flex justify-center px-4 py-16 bg-base-200">Hello!</div>
     </div>
   </body>
 </html>
